--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HRIS Dashboard</title>
+    <title>BTM HRIS</title>
     <meta name="description" content="Modern Human Resource Information System" />
     <meta name="author" content="Bmat" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
