--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BTM HRIS</title>
-    <meta name="description" content="Modern Human Resource Information System" />
+    <meta name="description" content="Modern Human Resources Information System" />
     <meta name="author" content="Bmat" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
