--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="HRIS Dashboard" />
-    <meta property="og:description" content="BTM HRIS Resource Information System" />
+    <meta property="og:description" content="HRIS Resource Information System" />
     <meta property="og:type" content="website" />
   
 
